--- a/index.css
+++ b/index.css
@@ -6,6 +6,7 @@ body {
   justify-content: center;
   background-size: 1000px;
   background-image: url("https://www.psdgraphics.com/wp-content/uploads/2022/01/white-math-paper-texture.jpg");
+  background-position: center center;
 }
 .paper {
   background-image: url("https://i0.wp.com/textures.world/wp-content/uploads/2018/10/2-Millimeter-Paper-Background-copy.jpg?ssl=1");
@@ -48,13 +49,13 @@ img {
   opacity: 0.6;
 }
 .paper.red {
-  filter: hue-rotate(90deg);
+  /*   filter: hue-rotate(90deg); */
 }
 .paper:nth-of-type(3n) {
   background-position: left top;
 }
 .paper:nth-of-type(3n) {
-  filter: hue-rotate(200deg);
+  /*   filter: hue-rotate(200deg); */
 }
 p {
   font-family: "Zeyada";
